test/should-fail/jfxc1310Applet.visage
/*
 * @test/compile-error
 * @compile jfxc1310Application.visage
 */

public class jfxc1310Applet {
    var app:jfxc1310Application;

    function do() {
        app.content;
    }
}
